# redatam-plugins

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
datasource-csv/: CMakeLists.txt  csv.hpp  csv_datasource.cpp  csv_datasource.h
datasource-csv/nlohmann/: json.hpp
datasource-spss/: CMakeLists.txt  spss_datasource.cpp  spss_datasource.h
datasource-spss/readstat/: readme.txt
exporter-graphs/: CMakeLists.txt  exporter_gnuplot_png.cpp  exporter_gnuplot_png.h  exporter_jpg.cpp  exporter_jpg.h  register_exporters.cpp
exporter-rdata/: CMakeLists.txt  rdata_exporter.cpp  rdata_exporter.h
exporter-rdata/librdata/: rdata_io_unistd.c  rdata_write.c
exporter-txt/: CMakeLists.txt  fort.c  text_exporter.cpp  text_exporter.h
exporter-xlsx/: CMakeLists.txt  xlsx_exporter.cpp  xlsx_exporter.h
